Fix code blocks in dark mode

--- a/assets/css/darkmode.scss
+++ b/assets/css/darkmode.scss
@@ -14,6 +14,9 @@
         text-decoration: underline;
       }
     }
+    code {
+      background: #333;
+    }
     footer .content-container {
       background: #333;
     }
